--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,14 @@ h1 {
   text-align:center;
   font-size: 400%;
   text-shadow: 2px 2px 4px #ffffff;
-  font-family: fantasy;
-  color:#ccffff;
+  font-family: sans-serif;
+  background: white;
+}
+
+body > h1 > a, body > h1 > a:visited {
+    font-family: serif;
+    font-style: italic;
+    color: black;
 }
 
 p {
@@ -14,20 +20,24 @@ p {
 ul {
   text-align: center;
   margin: -30px 0 0 -40px;
+  list-style-type: none;
+}
+
+body > ul > li > a {
+    color: black;
 }
 
 ul li{
   display: inline;
   padding: 0 10px;
   font-size: x-large;
-  background-color: white;
   font-style: italic;
   }
 
 ol {
   font-size: large;
   line-height: 25px;
-
+  list-style-type: none;
 }
 
 h2 {
@@ -35,13 +45,20 @@ h2 {
 }
 
 img {
-  display: block;
-  margin: 10px auto 0;
   border-radius: 5%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-body {
-  padding: 0 10%;
-  background-color: #4d0026;
-  color: #ffffff;
-}
+ html {
+    font-family: sans-serif;
+    padding: 10px;
+    text-shadow: 2px 2px 4px #ffffff;
+    text-align: center;
+ }
+
+ body > footer > p {
+    border-top: 1px solid black;
+    font-size: 20%;
+ }
